force-app/main/default/objects/Ledger_Entry__c/Ledger_Entry__c.object-meta.xml
<CustomObject>
    <description>Customer Ledger Entries from ERP System.</description>
    <label>Ledger Entry</label>
    <nameField>
        <label>Entry Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledger Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>