force-app/main/default/objects/Ledger_Entry__c/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <label>Document No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>