force-app/main/default/objects/Ledger_Entry__c/fields/Payment_Discount_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Discount_Date__c</fullName>
    <label>Payment Discount Date</label>
    <type>Date</type>
</CustomField>