force-app/main/default/objects/Ledger_Entry__c/fields/Profit_LCY__c.field-meta.xml
<CustomField>
    <fullName>Profit_LCY__c</fullName>
    <label>Profit LCY</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>