force-app/main/default/objects/Ledger_Entry__c/fields/Sell_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell-to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ledger Entries (Sell-to Customer)</relationshipLabel>
    <relationshipName>Ledger_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>