force-app/main/default/objects/Ledger_Entry__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Unique composed key from ERP system</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique composed key from ERP System - do not edit !</inlineHelpText>
    <label>Unique Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>